# bazel-tools-python

./: .bazelignore  .bazelrc  .gitignore  .gitlint  BUILD  CONTRIBUTING.md  MODULE.bazel  README.md  SECURITY.md  WORKSPACE  project_config.bzl  pyproject.toml  versions.json
.github/workflows/: tests.yml
bazel/buildifier/: BUILD
bazel/rules/: rules_python_pip_hub.bzl
bazel/toolchains/: toolchains.bzl
bazel/toolchains/python/: BUILD  versions.bzl
docs/: conf.py  index.rst
main/: genindex.html  index.html  objects.inv  search.html  searchindex.js
pr-1/: genindex.html  index.html  needs.json  search.html
quality/: BUILD  defs.bzl
quality/private/python/: BUILD  README.md  black_entry_point.py  isort_entry_point.py  mypy_entry_point.py  pip_audit_entry_point.py  py_pytest.bzl  pycoverage_entry_point.py  pylint_entry_point.py  python_collect_aspect.bzl  python_helper.bzl  python_pip_audit_rule.bzl  python_providers.bzl  python_tool_aspect.bzl  ruff_entry_point.py
quality/private/python/pycoverage/: BUILD  output_generator.py  report_generator.py
quality/private/python/pycoverage/test/: BUILD  test_pycoverage_output_generator.py  test_pycoverage_report_generator.py
quality/private/python/pycoverage/test/data/: lcov_files.tmp  lcov_files_no_py_targets.tmp
quality/private/python/support/: BUILD  pyproject.toml
quality/private/python/tools/: BUILD  black.py  black_runner.py  isort.py  isort_runner.py  mypy_runner.py  pip_audit_runner.sh.template  pylint_runner.py  pytest_runner.py  python_tool_common.py  ruff_check_runner.py  ruff_format_runner.py
quality/private/python/tools/test/: BUILD  conftest.py  test_black_runner.py  test_isort_runner.py  test_mypy_runner.py  test_pylint_runner.py  test_python_tool_common.py  test_ruff_check_runner.py  test_ruff_format_runner.py
scripts/: run_all_tests.sh
test/: .bazelignore  .bazelrc  BUILD  MODULE.bazel  WORKSPACE  awesome_pyproject.toml  dummy_bin.py  dummy_lib.py  dummy_pytest.py  dummy_test.py  run_all_tests.sh
test/pip/: BUILD  extensions.bzl  requirements.in  requirements_lock_3_10.txt  requirements_lock_3_11.txt  requirements_lock_3_12.txt  requirements_lock_3_13.txt  requirements_lock_3_14.txt  requirements_lock_3_8.txt  requirements_lock_3_9.txt  test.sh  update.sh
test_single_version/: .bazelrc  BUILD  MODULE.bazel  README.md  dummy_bin_single_version.py  pyproject.toml  run_all_tests.sh
test_single_version/pip/: BUILD  check_vulnerabilities.sh  extensions.bzl  requirements_lock.txt  test.sh  update.sh
test_single_version/tests/: BUILD  dummy_pytest_single_version.py  dummy_test_single_version.py
