# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "bazel_tools_python_test_single",
    version = "0.0.0",
    compatibility_level = 1,
)

##########################
# Internal dependencies. #
##########################

bazel_dep(name = "rules_python", version = "1.6.3")

######################################
# Python toolchain and dependencies. #
######################################

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    ignore_root_user_error = True,
    is_default = False,
    python_version = "3.14",
)
use_repo(python, test_python_3_14 = "python_3_14")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "test_pip_3_14",
    python_version = "3.14",
    requirements_lock = "//pip:requirements_lock.txt",
)
use_repo(pip, "test_pip_3_14")

rules_python_pip_hub = use_extension("//pip:extensions.bzl", "rules_python_pip_hub")
use_repo(rules_python_pip_hub, "single_pip_hub")

###########################
# Dependencies from bazel_tools_python. #
###########################

bazel_dep(name = "score_bazel_tools_python", version = "0.1.4", repo_name = "bazel_tools_python")
local_path_override(
    module_name = "score_bazel_tools_python",
    path = "..",
)
